--- a/androcles/calc.1
+++ b/androcles/calc.1
@@ -6,10 +6,10 @@ struct FullAdderOut(Bit z, Bit cout);
 funct FullAdder(Bit a, Bit b, Bit cin; FullAdderOut) {
   Bit 0 = Bit:0(Unit());
   Bit 1 = Bit:1(Unit());
-  Bit z = a ? (0: b ? (0: c, 1: c ? (0: 1, 1: 0)),
-               1: b ? (0: c ? (0: 1, 1: 0), 1: c));
-  Bit cout = a ? (0: b ? (0: 0, 1: c),
-                  1: b ? (0: c, 1: 1));
+  Bit z = a ? (0: b ? (0: cin, 1: cin ? (0: 1, 1: 0)),
+               1: b ? (0: cin ? (0: 1, 1: 0), 1: cin));
+  Bit cout = a ? (0: b ? (0: 0, 1: cin),
+                  1: b ? (0: cin, 1: 1));
   return FullAdderOut(z, cout);
 }
 
