--- a/bathylus/todo.txt
+++ b/bathylus/todo.txt
@@ -20,8 +20,7 @@
    of the main function.
 
 * Separate bathylus.tcl from test cases.
-* Add assertion with expected values to test cases.
-* Once everything is up to snuff, delete androcles and old bathylus code.
+* Once everything is up to snuff, delete androcles code
 * Prefix struct, union, and funct with '@' to avoid polluting the user
   namespace?
 
