Fix a bug in the parser and switch to GC_MALLOC.
It's still blowing up memory wise. Probably an infinite loop with allocations.

--- a/calvisus/todo.txt
+++ b/calvisus/todo.txt
@@ -1,4 +1,7 @@
 
+* Note: my grammer means the last statement in a block must not have
+  a semicolon. Isn't that weird?
+  Perhaps the block statement should be '{' <expr> ';' '}'?
 * Use boehm GC, otherwise we will have tons of memory leaks.
 * Clean up and document all the functions.
   - Follow style of the Tcl code base? Use prefix FblC?
