--- a/calvisus/todo.txt
+++ b/calvisus/todo.txt
@@ -1,8 +1,5 @@
 
-* Note: my grammer means the last statement in a block must not have
-  a semicolon. Isn't that weird?
-  Perhaps the block statement should be '{' <expr> ';' '}'?
-* Use boehm GC, otherwise we will have tons of memory leaks.
+* Update to support revised syntax.
 * Clean up and document all the functions.
   - Follow style of the Tcl code base? Use prefix FblC?
   - Write constructors for each data type along side the type?
