--- a/fblc/todo.txt
+++ b/fblc/todo.txt
@@ -1,6 +1,6 @@
 
 * Add a static pass to type check an environment.
-  - Need to have 'num_args' field of expr to verify the right number of
+  - Need to have 'argc' field of expr to verify the right number of
     arguments are actually there?
   - Have FblcLocName for located names, and store all expression locations
     that way? (But what about '{...}' expressions?
