Started writing up the spec based on old drafts.
Got through the data section.

--- a/fblc/todo.txt
+++ b/fblc/todo.txt
@@ -16,5 +16,6 @@
 * Write a man page for fblc?
 * Write a vim syntax for fblc?
 * Add code coverage to the build?
+* Write tests to get 100% code coverage, or reasonably close.
 * Start work on a calculator program as a basic test for processes.
 
